force-app/main/default/objects/BEAT_Request__c/BEAT_Request__c.object-meta.xml
<CustomObject>
    <label>BEAT Request</label>
    <nameField>
        <displayFormat>BTR-{0000000}</displayFormat>
        <label>BEAT Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BEAT Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>