force-app/main/default/objects/BEAT_Request__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BEAT Requests (Constituent)</relationshipLabel>
    <relationshipName>BEAT_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>