force-app/main/default/objects/BEAT_Request__c/fields/Constituent_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Deceased__c</fullName>
    <formula>Constituent__r.ucinn_ascendv2__Is_Deceased__c</formula>
    <label>Constituent Deceased</label>
    <type>Checkbox</type>
</CustomField>