force-app/main/default/objects/BEAT_Request__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordTypeId</field>
            <operation>equals</operation>
            <value>BEAT Event</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>BEAT Requests</relationshipLabel>
    <relationshipName>BEAT_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>