force-app/main/default/objects/BEAT_Request__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>Event__r.StartDate</formula>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>