force-app/main/default/objects/BEAT_Request__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BEAT Requests</relationshipLabel>
    <relationshipName>BEAT_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>