force-app/main/default/objects/BEAT_Request__c/fields/Organization_Lifetime_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Organization_Lifetime_Fundraising__c</fullName>
    <formula>Organization__r.ucinn_ascendv2__Lifetime_Fundraising__c</formula>
    <label>Organization Lifetime Fundraising</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>