force-app/main/default/objects/BEAT_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Constituent__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>